--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
     </head>
     <body>
         <nav>
-            <!--Menu goes here-->
+            <div class="topNav">
+                <a href="index.html"><img src="assets/images/logo.png" width="40px"></a>
+                
+                <div class="topNavRight">
+                    <a class="active" href="index.html">Home</a>
+                    <a href="pages/about.html">About Us</a>
+                    <a href="pages/flights.html">Flight</a>
+                    <a href="pages/contact.html">Contact Us</a>
+                </div>
+            </div>
         </nav>
         <header>
             <!--Everything before the fold-->
