--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav>
             <div class="topNav">
                 <a href="index.html"><img src="assets/images/logo.png" width="40px"></a>
-                
+
                 <div class="topNavRight">
                     <a class="active" href="index.html">Home</a>
                     <a href="pages/about.html">About Us</a>
@@ -32,7 +32,7 @@
             </div>
         </nav>
         <header>
-            <!--Everything before the fold-->
+            <img src="assets/images/homeHeaderImage.jpg">
         </header>
         <section>
             <!--You will have multiple-->
