--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
         <header>
             <img src="assets/images/homeHeaderImage.jpg">
         </header>
-        <section>
-            <!--You will have multiple-->
+        <section class="text">
+            <h1>This is a heading</h1>
+            <p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. 
+                This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. </p>
         </section>
         <footer>
             <p>Copyright 2024 - HTML Template</p>
