--- a/index.html
+++ b/index.html
@@ -39,6 +39,27 @@
             <p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. 
                 This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. </p>
         </section>
+        <section>
+            <div class="imgTextOverlay">
+                <img src="assets/images/homeGallery3.jpg">
+                <div class="bottomLeft">Bottom Left</div>
+                <div class="topLeft">Top Left</div>
+                <div class="topRight">Top Right</div>
+                <div class="bottomRight">Bottom Right</div>
+                <div class="center">Center</div>
+            </div>
+        </section>
+        <section>
+            <img id="filters" src="assets/images/homeGallery3.jpg" width="50%">
+        </section>
+        <section>
+            <div class="container">
+                <img class="image" src="assets/images/homeGallery1.jpg">
+                <div class="overlay">
+                    <p class="overlayText">Text over image</p>
+                </div>
+            </div>
+        </section>
         <footer>
             <p>Copyright 2024 - HTML Template</p>
         </footer>
